fix overflow border radius for product grid cards

--- a/src/droplets/product-grid/themes/default/styles.less
+++ b/src/droplets/product-grid/themes/default/styles.less
@@ -2,6 +2,7 @@
   border-color: #dedede;
   border-style: solid;
   border-width: 1px;
+  overflow: hidden;
   text-decoration: none;
 }
 
